--- a/Puff/Puff/View/Member.storyboard
+++ b/Puff/Puff/View/Member.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FOS-e0-duu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FOS-e0-duu">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,18 +45,15 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="collectionView" destination="u0i-fb-UHv" id="egd-cs-VVf"/>
-
                         <segue destination="sAJ-OR-vla" kind="show" identifier="SegueToStoreRecord" id="Ydy-if-kPE"/>
-
-                        <segue destination="5eL-9D-f3y" kind="show" id="qSl-ju-7w9"/>
-                        <segue destination="bqM-9D-xRb" kind="show" id="uhQ-RC-2MD"/>                
+                        <segue destination="5eL-9D-f3y" kind="show" identifier="SegueToEdit" id="qSl-ju-7w9"/>
+                        <segue destination="bqM-9D-xRb" kind="show" id="uhQ-RC-2MD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g5e-W3-99b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="300" y="143"/>
         </scene>
-
         <!--StoreRecord-->
         <scene sceneID="A72-A5-FFn">
             <objects>
@@ -65,7 +63,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ryq-tI-XBK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1008" y="143"/>
-
+        </scene>
         <!--EditMember-->
         <scene sceneID="9gw-23-Ove">
             <objects>
